peac_dev/force-app/main/default/objects/Gds_Score__c/Gds_Score__c.object-meta.xml
<CustomObject>
    <label>Gds Score Request/Response</label>
    <nameField>
        <displayFormat>GdsScore-{0000}</displayFormat>
        <label>Gds Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gds Score Gds Score Requests/Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>