peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Agreed_to_Legal_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_Legal_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Store Agreed to Legal Disclaimer from opportunity</description>
    <label>Agreed to Legal Disclaimer</label>
    <type>Checkbox</type>
</CustomField>