peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Amount_of_Deposits_Average__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Deposits_Average__c</fullName>
    <description>Store Amount of Deposits Average from Bank</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount of Deposits Average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>