peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>Store Annual Revenue from opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>