peac_dev/force-app/main/default/objects/Gds_Score__c/fields/APPLICATION_LP_STATUS__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_LP_STATUS__c</fullName>
    <description>Store APPLICATION LP STATUS from opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>APPLICATION LP STATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>