peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Application_Months__c.field-meta.xml
<CustomField>
    <fullName>Application_Months__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>