peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Asset_Manufacturer_Year__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manufacturer_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Manufacturer Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>