peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Balance__c</fullName>
    <description>Store from Average Daily Balance from opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Average Daily Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>