peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Bank_Statements_Score_17__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statements_Score_17__c</fullName>
    <label>Bank Statements Score (17)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>