peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Gds_Score_Request_Company__c</referenceTo>
    <relationshipName>Gds_Scores2</relationshipName>
    <type>Lookup</type>
</CustomField>