peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Broker_Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_Vendor_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Vendor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>