peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Business_Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Rule Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>