peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Business_Rules_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Business_Rules_Not_Met__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Rules Not Met</label>
    <length>255</length>
    <type>Text</type>
</CustomField>