peac_dev/force-app/main/default/objects/Gds_Score__c/fields/CALLTYPE__c.field-meta.xml
<CustomField>
    <fullName>CALLTYPE__c</fullName>
    <description>Store calltype as KEEP THIS (Initial submission is SF/LP) Future state (RS)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CALLTYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>