peac_dev/force-app/main/default/objects/Gds_Score__c/fields/CCID__c.field-meta.xml
<CustomField>
    <fullName>CCID__c</fullName>
    <description>Store CCID number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CCID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>