peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Company_1__c.field-meta.xml
<CustomField>
    <fullName>Company_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company 1</label>
    <referenceTo>Gds_Score_Request_Company__c</referenceTo>
    <relationshipName>Gds_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>