peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>