peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Corporate_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Guarantor</label>
    <referenceTo>Gds_Score_Request_Company__c</referenceTo>
    <relationshipName>Gds_Scores1</relationshipName>
    <type>Lookup</type>
</CustomField>