peac_dev/force-app/main/default/objects/Gds_Score__c/fields/CPU_Time_Usage__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Usage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CPU Time Usage (ms)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>