peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Credit_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Credit_Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Strategy</label>
    <type>TextArea</type>
</CustomField>