peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Customer_Dealer_Distance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dealer_Distance__c</fullName>
    <label>Customer Dealer Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>