peac_dev/force-app/main/default/objects/Gds_Score__c/fields/D_B_Score_41__c.field-meta.xml
<CustomField>
    <fullName>D_B_Score_41__c</fullName>
    <label>D&amp;B Score (41)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>