peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Daily_Average_Balance_Average__c.field-meta.xml
<CustomField>
    <fullName>Daily_Average_Balance_Average__c</fullName>
    <description>Store Daily Average Balance Average from Bank</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Daily Average Balance Average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>