peac_dev/force-app/main/default/objects/Gds_Score__c/fields/DBA_Password__c.field-meta.xml
<CustomField>
    <fullName>DBA_Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DBA Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>