peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Gds_Score_Request_Company__c</referenceTo>
    <relationshipName>Gds_Scores3</relationshipName>
    <type>Lookup</type>
</CustomField>