peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>