peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Dealer_Status__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>