peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Display_Contact_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Display_Contact_Payments_Made__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Display Contact Payments Made</label>
    <length>255</length>
    <type>Text</type>
</CustomField>