peac_dev/force-app/main/default/objects/Gds_Score__c/fields/DLG_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>DLG_Risk_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DLG Risk Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>