peac_dev/force-app/main/default/objects/Gds_Score__c/fields/DLR_ONHOLD_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>DLR_ONHOLD_INDICATOR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DLR ONHOLD INDICATOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>