peac_dev/force-app/main/default/objects/Gds_Score__c/fields/DWH_Error__c.field-meta.xml
<CustomField>
    <fullName>DWH_Error__c</fullName>
    <description>Send to GDS as Y or N</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DWH_Error</label>
    <length>5</length>
    <type>Text</type>
</CustomField>