peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ending_Balance_Average__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance_Average__c</fullName>
    <description>Store Ending Balance Average from Bank</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ending Balance Average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>