peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Equip_Code__c.field-meta.xml
<CustomField>
    <fullName>Equip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>