peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Experian_Premiere_Score_26__c.field-meta.xml
<CustomField>
    <fullName>Experian_Premiere_Score_26__c</fullName>
    <label>Experian Premiere Score (26)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>