peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Final_Decision_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Decision Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>