peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>