peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial</label>
    <referenceTo>Financial__c</referenceTo>
    <relationshipLabel>Gds Score Gds Score Requests/Responses</relationshipLabel>
    <relationshipName>Financial_Gds_Score_Requests_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>