peac_dev/force-app/main/default/objects/Gds_Score__c/fields/FraudReviewFlag__c.field-meta.xml
<CustomField>
    <fullName>FraudReviewFlag__c</fullName>
    <label>FraudReviewFlag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>