peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Gds_Score_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Gds_Score_External_Id__c</fullName>
    <description>Store external id as loan number-count of gds score list</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Gds Score External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>