peac_dev/force-app/main/default/objects/Gds_Score__c/fields/High_Risk_5_Deals__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_5_Deals__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>High Risk 5 Deals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>