peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Industry_Preference_5__c.field-meta.xml
<CustomField>
    <fullName>Industry_Preference_5__c</fullName>
    <label>Industry Preference (5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>