peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Info_Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Info_Lease_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Info Lease Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>