peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Last_Date_Score_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Score_Retrieved__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Date Scorex Retrieved</label>
    <type>Date</type>
</CustomField>