peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Lessor__c.field-meta.xml
<CustomField>
    <fullName>Lessor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lessor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>