peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>