peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Loan_Pre_Qual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Pre_Qual_Amount__c</fullName>
    <description>Store Loan Pre-Qual Amount from account</description>
    <label>Loan Pre-Qual Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>