peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <description>Store loan purpose from opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>