peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Loan_Score_105__c.field-meta.xml
<CustomField>
    <fullName>Loan_Score_105__c</fullName>
    <label>Loan Score (105)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>