peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <description>Store product name from opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>