peac_dev/force-app/main/default/objects/Gds_Score__c/fields/LP_SF_Eligibility_Rules__c.field-meta.xml
<CustomField>
    <fullName>LP_SF_Eligibility_Rules__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LP/SF Eligibility Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>