peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Mapping_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mapping Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>