peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Meets_Initial_Cutoff_Score__c.field-meta.xml
<CustomField>
    <fullName>Meets_Initial_Cutoff_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meets Initial Cutoff Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>