peac_dev/force-app/main/default/objects/Gds_Score__c/fields/MLC_Exposure__c.field-meta.xml
<CustomField>
    <fullName>MLC_Exposure__c</fullName>
    <description>Store Lease Exposure from account</description>
    <label>MLC Exposure</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>