peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Months_Verified_TIB__c.field-meta.xml
<CustomField>
    <fullName>Months_Verified_TIB__c</fullName>
    <description>Months Verified (TIB) with the manually entered value of the Applicant</description>
    <label>Months Verified (TIB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>