peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Negative_Days_Average__c.field-meta.xml
<CustomField>
    <fullName>Negative_Days_Average__c</fullName>
    <description>Store Negative Days Average from Bank</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Negative Days Average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>