peac_dev/force-app/main/default/objects/Gds_Score__c/fields/New_Used__c.field-meta.xml
<CustomField>
    <fullName>New_Used__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New/Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>