peac_dev/force-app/main/default/objects/Gds_Score__c/fields/NSFs_Average__c.field-meta.xml
<CustomField>
    <fullName>NSFs_Average__c</fullName>
    <description>Store NSFs Average from Bank</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NSFs Average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>