peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Number_of_Deposits_Average__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deposits_Average__c</fullName>
    <description>Store Number of Deposits Average from Bank</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Deposits Average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>