peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Offer_Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Offer_Pricing_Model__c</fullName>
    <description>Created for GDS request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Pricing Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>