peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Opening_Balance_Average__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance_Average__c</fullName>
    <description>Store Opening Balance Average from Bank</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Opening Balance Average</label>
    <length>255</length>
    <type>Text</type>
</CustomField>