peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Gds_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>