peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <description>Add for SAL-2732 to add opportunity record type to gds call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>