peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Other_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Other_Purpose__c</fullName>
    <description>Store other purpose from opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>