peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Paynet_Score_16__c.field-meta.xml
<CustomField>
    <fullName>Paynet_Score_16__c</fullName>
    <label>Paynet Score (16)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>