peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Personal_Guarantor_1__c.field-meta.xml
<CustomField>
    <fullName>Personal_Guarantor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Guarantor 1</label>
    <referenceTo>Gds_Score_Request_Individual__c</referenceTo>
    <relationshipName>Gds_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>