peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Personal_Guarantor_2__c.field-meta.xml
<CustomField>
    <fullName>Personal_Guarantor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Guarantor 2</label>
    <referenceTo>Gds_Score_Request_Individual__c</referenceTo>
    <relationshipName>Gds_Scores1</relationshipName>
    <type>Lookup</type>
</CustomField>