peac_dev/force-app/main/default/objects/Gds_Score__c/fields/PK__c.field-meta.xml
<CustomField>
    <fullName>PK__c</fullName>
    <description>Store PK number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PK Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>