peac_dev/force-app/main/default/objects/Gds_Score__c/fields/PQ_Expiration__c.field-meta.xml
<CustomField>
    <fullName>PQ_Expiration__c</fullName>
    <description>Store PQ Expiration date from account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PQ Expiration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>