peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Pre_Delivery_20k_Trial__c.field-meta.xml
<CustomField>
    <fullName>Pre_Delivery_20k_Trial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Delivery 20k Trial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>