peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Prior_Marline_Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Prior_Marline_Experience_Score__c</fullName>
    <label>Prior Marline Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>