peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <description>Store Decisioned By from Opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>