peac_dev/force-app/main/default/objects/Gds_Score__c/fields/PUR_OPTION__c.field-meta.xml
<CustomField>
    <fullName>PUR_OPTION__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PUR_OPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>