peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ratio_ADB_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Ratio_ADB_Monthly_Revenue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ratio ADB/Monthly Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>