peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Raw_Score__c.field-meta.xml
<CustomField>
    <fullName>Raw_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Raw Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>