peac_dev/force-app/main/default/objects/Gds_Score__c/fields/RBP_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>RBP_Risk_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RBP Risk Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>