peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Reasons_Not_Scored_Description__c.field-meta.xml
<CustomField>
    <fullName>Reasons_Not_Scored_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reasons Not Scored Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>