peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Resp_Primary_Contact_Emailage_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Resp_Primary_Contact_Emailage_Date_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resp Primary Contact Emailage Date Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>