peac_dev/force-app/main/default/objects/Gds_Score__c/fields/RESPONSEDATA_DBPASSWORD__c.field-meta.xml
<CustomField>
    <fullName>RESPONSEDATA_DBPASSWORD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RESPONSEDATA DBPASSWORD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>