peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Restricted_Equip__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Equip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Restricted Equip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>