peac_dev/force-app/main/default/objects/Gds_Score__c/fields/RNS_Description__c.field-meta.xml
<CustomField>
    <fullName>RNS_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RNS Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>