peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>