peac_dev/force-app/main/default/objects/Gds_Score__c/fields/SICCODE_Preference_Input__c.field-meta.xml
<CustomField>
    <fullName>SICCODE_Preference_Input__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SICCODE Preference Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>