peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Signal_Count__c.field-meta.xml
<CustomField>
    <fullName>Signal_Count__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signal Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>