peac_dev/force-app/main/default/objects/Gds_Score__c/fields/SOQL_Query_Usage__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query_Usage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOQL Query Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>