peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Times_Delinquent_Over_90__c.field-meta.xml
<CustomField>
    <fullName>Times_Delinquent_Over_90__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Times Delinquent Over 90</label>
    <length>255</length>
    <type>Text</type>
</CustomField>