peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Total_Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>Total_Bank_Statements__c</fullName>
    <description>Store Total Bank Statements</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Bank Statements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>