peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Total_Exposure_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_Amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Exposure Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>