peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Active_Cont_Past_31__c.field-meta.xml
<CustomField>
    <fullName>Ud_Active_Cont_Past_31__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Active Cont Past 31</label>
    <length>255</length>
    <type>Text</type>
</CustomField>