peac_dev/force-app/main/default/objects/Gds_Score__c/fields/ud_Active_Dealer__c.field-meta.xml
<CustomField>
    <fullName>ud_Active_Dealer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ud Active Dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>