peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_App_Status__c.field-meta.xml
<CustomField>
    <fullName>Ud_App_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud App Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>