peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Approved_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ud_Approved_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Approved Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>